Change background color and add header and footer to body

--- a/css/main.css
+++ b/css/main.css
@@ -96,12 +96,12 @@ textarea {
    ========================================================================== */
 
 html {
-  background-color: darkolivegreen;
+  background-color: maroon;
   height: 100%;
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Raleway", sans-serif;
   padding: 2em;
   font-size: 1.25em;
   height: 100%;
